<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderNow">
    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/image1"
                    android:layout_width="200dp"
                    android:layout_height="190dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/desc_of_image1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img9"
                    tools:ignore="NestedWeights" />

                <ImageButton
                    android:id="@+id/image2"
                    android:contentDescription="@string/desc_of_image2"
                    android:layout_width="200dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/im2"/>
                
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/image3"
                    android:contentDescription="@string/desc_of_image3"
                    android:layout_width="200dp"
                    android:layout_height="160dp"
                    android:src="@drawable/im3"
                    android:scaleType="centerCrop"/>

                <ImageButton
                    android:id="@+id/image4"
                    android:contentDescription="@string/desc_of_image4"
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@drawable/img8"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/btnact2"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="160dp"
            android:layout_marginRight="100dp"
            android:onClick="addCart"
            android:background="@drawable/round"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="Add to cart" />

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:onClick="back"
            android:text="Back"
            android:textStyle="bold"
            android:textSize="30sp" />

    </FrameLayout>


</LinearLayout>